<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#51b3da"
    android:id="@+id/homeActivity"
    tools:context="com.example.sandumihai.discovertheworld.homeActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="90dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ip_editText_homeActivity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:hint="@string/ipHint_editText_homeActivity"
        android:inputType="text"/>

    <!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ipInfo_button_homeActivity"
        android:textStyle="bold"
        android:id="@+id/ipInfo_button_homeActivity"
        android:layout_alignParentTop="true"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:onClick="getIpInfo"/>
        -->

    <Button
        android:id="@+id/ipInfo_button_homeActivity"
        android:layout_width="210dp"
        android:layout_height="44dp"
        android:background="@drawable/button_custom"
        android:layout_marginLeft="60dp"
        android:text="@string/ipInfo_button_homeActivity"
        android:textSize="16sp"
        android:textColor="#030303"
        android:onClick="getIpInfo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_button_homeActivity"
        android:id="@+id/about_button_homeActivity"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/ipInfo_button_homeActivity"
        android:layout_centerHorizontal="true"
        android:onClick="toAbout"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_button_homeActivity"
        android:id="@+id/settings_button_homeActivity"
        android:layout_below="@+id/about_button_homeActivity"
        android:layout_centerHorizontal="true"
        android:onClick="settingsClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_button_homeActivity"
        android:id="@+id/exit_button_homeActivity"
        android:layout_below="@+id/settings_button_homeActivity"
        android:layout_centerHorizontal="true"
        android:onClick="exitClick"/>

</RelativeLayout>
