<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#51b3da"
    android:id="@+id/ipInfoActivity"
    tools:context="com.example.sandumihai.discovertheworld.ipInfoActivity">

<Space
    android:layout_width="match_parent"
    android:layout_height="90dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ipInfo_textView_ipInfoActivity"
        android:id="@+id/ipInfo_textView_ipInfoActivity"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_textView_ipInfoActivity"
        android:id="@+id/countryInfo_textView_ipInfoActivity"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal" />

    <!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/info_country_textButton_IpInfoActivity"
        android:id="@+id/info_country_button_IpInfo_Activity"
        android:onClick="openInfoCountryActivity"/>
        -->

    <Button
        android:id="@+id/info_country_button_IpInfo_Activity"
        android:layout_width="210dp"
        android:layout_height="44dp"
        android:background="@drawable/button_custom"
        android:layout_marginLeft="60dp"
        android:text="@string/info_country_textButton_IpInfoActivity"
        android:textSize="15sp"
        android:textColor="#030303"
        android:onClick="openInfoCountryActivity"
        android:layout_marginTop="40dp" />

    <!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchIP_button_ipInfoActivity"
        android:id="@+id/searchIP_button_ipInfoActivity"
        android:layout_gravity="center"
        android:onClick="backToHome"/>
        -->

    <Button
        android:id="@+id/searchIP_button_ipInfoActivity"
        android:layout_width="210dp"
        android:layout_height="44dp"
        android:background="@drawable/button_custom"
        android:layout_marginLeft="60dp"
        android:text="@string/searchIP_button_ipInfoActivity"
        android:textSize="15sp"
        android:textColor="#030303"
        android:onClick="backToHome"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/googleMap_button_ipInfoActivity"
        android:layout_width="210dp"
        android:layout_height="44dp"
        android:background="@drawable/button_custom"
        android:layout_marginLeft="60dp"
        android:text="Google Maps"
        android:textSize="15sp"
        android:textColor="#030303"
        android:onClick="toGoogleMaps"
        android:layout_marginTop="10dp"/>
</LinearLayout>
