<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#51b3da"
    android:id="@+id/settingsActivity">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:src="@drawable/settings_icon"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <!--change background -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/change_bg_icon"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_bg_text_view_settings"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:textColor="#fefefe"
            android:padding="20dp"
            android:id="@+id/background_text_view_Settings"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/openChangeBackground_spinner_SettingsActivity"
            android:layout_marginTop="50dp"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/back_image_button"

            android:id="@+id/back_button_to_menu_activity"
            android:onClick="backToIpHome"/>

    </LinearLayout>

    <!--Change font style-->


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/change_font_size_icon"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_font_size_settings"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="#fefefe"
            android:padding="20dp"
            android:id="@+id/fontStyle_textView_Settings"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/openChangeFontStyle_spinner_SettingsActivity"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
    <!--Change language -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/change_language_icon"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:onClick="makeChange"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_language_settings"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="#fefefe"
            android:padding="20dp"
            android:id="@+id/language_textView_Settings"/>


        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/openChangeLanguage_spinner_SettingsActivity"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/back_image_button"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:id="@+id/back_button_to_home_activity"
        android:onClick="backToPreviousMenu"/>
</LinearLayout>